Moved code off 'app.js'
-beginning to organize code into separate files
  -moved code into /game/events.js
-centered body in 'index.scss'
-able to get a string of content in gameBoard
  -may be able to help get win condition using 'M' and 'L'

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,5 +1,10 @@
 @import '~bootstrap/scss/bootstrap';
 
+body{
+  margin: auto;
+  text-align: center;
+}
+
 #game { //want the gameBoard to be 3x3, center
   align-items: center;
   display: flex;
