HTML and CSS modification
HTML:
-added ability to change between In and Out on Modal
  -applied preventing click outside of result modal
CSS:
-sign out and change password are displayed to none to start game
-beginning to try and hide board on document ready

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,11 +1,20 @@
 @import '~bootstrap/scss/bootstrap';
 
-body{
+body {
   margin: auto;
   text-align: center;
 }
 
+#sign-out {
+  display: none;
+}
+
+#change-password {
+  display: none;
+}
+
 #game { //want the gameBoard to be 3x3, center
+  display: none;
   align-items: center;
   display: flex;
   flex-wrap: wrap;
