--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -55,7 +55,7 @@ header {
   width: 600px;
 }
 
-#game-status {
+.game-status {
   font-size: 20px;
   padding: 10px 0;
 }
@@ -72,7 +72,7 @@ header {
   display: none;
 }
 
-#username {
+.username {
   color: #fff;
   font-size: 20px;
   text-shadow:
